# mpp

./: CMakeLists.txt
headers/: MPPLibrary.h  MPPLibraryConfig.h.in
headers/private/: mpp_private.h
src/: MPPLibrary.c  MPPNetworkFrame.c  MPPSession.c
tests/basic_json/: basic_json.c
tests/basic_linking/: basic_linking.c
